--- a/app/src/main/res/layout/fragment_admin.xml
+++ b/app/src/main/res/layout/fragment_admin.xml
@@ -1,7 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="com.example.myriad.pos.Admin"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/btn">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -19,7 +20,8 @@
             android:text="@string/Add_Product"
             android:id="@+id/add_prod"
             android:layout_weight="1"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:background="?android:attr/selectableItemBackground" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -28,7 +30,8 @@
             android:id="@+id/cancel_sale"
             android:layout_weight="1"
             android:text="@string/Cancel_Transaction"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:background="?android:attr/selectableItemBackground" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -37,7 +40,8 @@
             android:text="@string/Print_receipts"
             android:id="@+id/print_receipt"
             android:layout_weight="1"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:background="?android:attr/selectableItemBackground" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -47,7 +51,8 @@
             android:layout_weight="1"
             android:text="@string/Clear"
             android:textSize="12sp"
-            android:layout_gravity="center_vertical" />
+            android:layout_gravity="center_vertical"
+            android:background="?android:attr/selectableItemBackground" />
     </LinearLayout>
 
     <LinearLayout
@@ -64,7 +69,8 @@
             android:layout_height="match_parent"
             android:text="@string/seven"
             android:id="@+id/b7"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -72,7 +78,8 @@
             android:layout_height="match_parent"
             android:text="@string/eight"
             android:id="@+id/b8"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -80,15 +87,16 @@
             android:layout_height="match_parent"
             android:text="@string/nine"
             android:id="@+id/b9"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:text="@string/Scan"
             android:id="@+id/scan_b"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground" />
     </LinearLayout>
 
     <LinearLayout
@@ -105,7 +113,8 @@
             android:layout_height="match_parent"
             android:text="@string/four"
             android:id="@+id/b4"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -113,7 +122,8 @@
             android:layout_height="match_parent"
             android:text="@string/five"
             android:id="@+id/b5"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -121,7 +131,8 @@
             android:layout_height="match_parent"
             android:text="@string/six"
             android:id="@+id/b6"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -129,7 +140,8 @@
             android:layout_height="match_parent"
             android:text="@string/Refund"
             android:id="@+id/refund_b"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground" />
     </LinearLayout>
 
     <LinearLayout
@@ -146,7 +158,8 @@
             android:layout_height="match_parent"
             android:text="@string/one"
             android:id="@+id/b1"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -154,7 +167,8 @@
             android:layout_height="match_parent"
             android:text="@string/two"
             android:id="@+id/b2"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -162,7 +176,8 @@
             android:layout_height="match_parent"
             android:text="@string/three"
             android:id="@+id/b3"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -170,7 +185,8 @@
             android:layout_height="match_parent"
             android:text="@string/Change_Tax"
             android:id="@+id/mtax_b"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground" />
     </LinearLayout>
 
     <LinearLayout
@@ -187,7 +203,8 @@
             android:layout_height="match_parent"
             android:text="@string/zero"
             android:id="@+id/b0"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -195,7 +212,8 @@
             android:layout_height="match_parent"
             android:text="@string/dec"
             android:id="@+id/bdot"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -203,7 +221,8 @@
             android:layout_height="match_parent"
             android:text="@string/dzero"
             android:id="@+id/b00"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -211,6 +230,7 @@
             android:layout_height="match_parent"
             android:id="@+id/discount_b"
             android:layout_weight="1"
-            android:text="@string/Discount" />
+            android:text="@string/Discount"
+            android:background="?android:attr/selectableItemBackground" />
     </LinearLayout>
 </LinearLayout>
