--- a/app/src/main/res/layout/activity_cashier_.xml
+++ b/app/src/main/res/layout/activity_cashier_.xml
@@ -3,8 +3,8 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:weightSum="1"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.example.myriad.pos.Cashier_Activity"
     android:orientation="vertical"
     android:background="@color/bg">
 
@@ -12,20 +12,20 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="6">
+        android:weightSum="6" >
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="3">
+            android:weightSum="3" >
 
             <Button
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:text="@string/Admin"
-                android:id="@+id/admin_button"
+                android:id="@+id/button"
                 android:layout_weight="1"
                 android:background="?android:attr/selectableItemBackground" />
 
@@ -34,7 +34,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:text="@string/Cashier"
-                android:id="@+id/cashier_button"
+                android:id="@+id/button2"
                 android:layout_weight="1"
                 android:background="?android:attr/selectableItemBackground" />
 
@@ -43,7 +43,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:text="@string/Receipt"
-                android:id="@+id/receipt_button"
+                android:id="@+id/button3"
                 android:layout_weight="1"
                 android:background="?android:attr/selectableItemBackground" />
         </LinearLayout>
@@ -51,7 +51,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/tview"
+            android:id="@+id/textView2"
             android:layout_weight="5"
             android:gravity="center_vertical|right"
             android:paddingLeft="10dp"
@@ -62,7 +62,7 @@
             android:singleLine="true" />
 
         <LinearLayout
-            android:id="@+id/l2"
+            android:id="@+id/l1"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -80,8 +80,8 @@
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:text="@string/Add_Product"
-                    android:id="@+id/AP"
+                    android:text="@string/Grocery"
+                    android:id="@+id/button4"
                     android:layout_weight="1"
                     android:textSize="12sp"
                     android:background="?android:attr/selectableItemBackground" />
@@ -90,9 +90,9 @@
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/CS"
+                    android:id="@+id/button5"
                     android:layout_weight="1"
-                    android:text="@string/Cancel_Transaction"
+                    android:text="@string/Automotive"
                     android:textSize="12sp"
                     android:background="?android:attr/selectableItemBackground" />
 
@@ -100,8 +100,8 @@
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:text="@string/Print_receipts"
-                    android:id="@+id/PR"
+                    android:text="@string/General"
+                    android:id="@+id/button6"
                     android:layout_weight="1"
                     android:textSize="12sp"
                     android:background="?android:attr/selectableItemBackground" />
@@ -110,11 +110,10 @@
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/C"
+                    android:id="@+id/button7"
                     android:layout_weight="1"
                     android:text="@string/Clear"
                     android:textSize="12sp"
-                    android:layout_gravity="center_vertical"
                     android:background="?android:attr/selectableItemBackground" />
             </LinearLayout>
 
@@ -131,7 +130,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
                     android:text="@string/seven"
-                    android:id="@+id/b7"
+                    android:id="@+id/button4"
                     android:layout_weight="1"
                     android:background="?android:attr/selectableItemBackground" />
 
@@ -140,7 +139,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
                     android:text="@string/eight"
-                    android:id="@+id/b8"
+                    android:id="@+id/button5"
                     android:layout_weight="1"
                     android:background="?android:attr/selectableItemBackground" />
 
@@ -149,7 +148,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
                     android:text="@string/nine"
-                    android:id="@+id/b9"
+                    android:id="@+id/button6"
                     android:layout_weight="1"
                     android:background="?android:attr/selectableItemBackground" />
 
@@ -157,7 +156,7 @@
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/empty"
+                    android:id="@+id/button7"
                     android:layout_weight="1"
                     android:background="?android:attr/selectableItemBackground" />
             </LinearLayout>
@@ -175,7 +174,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
                     android:text="@string/four"
-                    android:id="@+id/b4"
+                    android:id="@+id/button4"
                     android:layout_weight="1"
                     android:background="?android:attr/selectableItemBackground" />
 
@@ -184,7 +183,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
                     android:text="@string/five"
-                    android:id="@+id/b5"
+                    android:id="@+id/button5"
                     android:layout_weight="1"
                     android:background="?android:attr/selectableItemBackground" />
 
@@ -193,7 +192,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
                     android:text="@string/six"
-                    android:id="@+id/b6"
+                    android:id="@+id/button6"
                     android:layout_weight="1"
                     android:background="?android:attr/selectableItemBackground" />
 
@@ -201,8 +200,8 @@
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:text="@string/Refund"
-                    android:id="@+id/RF"
+                    android:text="@string/gst"
+                    android:id="@+id/button7"
                     android:layout_weight="1"
                     android:background="?android:attr/selectableItemBackground" />
             </LinearLayout>
@@ -220,7 +219,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
                     android:text="@string/one"
-                    android:id="@+id/b1"
+                    android:id="@+id/button4"
                     android:layout_weight="1"
                     android:background="?android:attr/selectableItemBackground" />
 
@@ -229,7 +228,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
                     android:text="@string/two"
-                    android:id="@+id/b2"
+                    android:id="@+id/button5"
                     android:layout_weight="1"
                     android:background="?android:attr/selectableItemBackground" />
 
@@ -238,7 +237,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
                     android:text="@string/three"
-                    android:id="@+id/b3"
+                    android:id="@+id/button6"
                     android:layout_weight="1"
                     android:background="?android:attr/selectableItemBackground" />
 
@@ -246,8 +245,8 @@
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:text="@string/Change_Tax"
-                    android:id="@+id/MT"
+                    android:text="@string/pst"
+                    android:id="@+id/button7"
                     android:layout_weight="1"
                     android:background="?android:attr/selectableItemBackground" />
             </LinearLayout>
@@ -265,7 +264,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
                     android:text="@string/zero"
-                    android:id="@+id/b0"
+                    android:id="@+id/button4"
                     android:layout_weight="1"
                     android:background="?android:attr/selectableItemBackground" />
 
@@ -274,7 +273,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
                     android:text="@string/dec"
-                    android:id="@+id/dot"
+                    android:id="@+id/button5"
                     android:layout_weight="1"
                     android:background="?android:attr/selectableItemBackground" />
 
@@ -283,7 +282,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
                     android:text="@string/dzero"
-                    android:id="@+id/b00"
+                    android:id="@+id/button6"
                     android:layout_weight="1"
                     android:background="?android:attr/selectableItemBackground" />
 
@@ -291,9 +290,9 @@
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/DC"
+                    android:text="@string/total"
+                    android:id="@+id/button7"
                     android:layout_weight="1"
-                    android:text="@string/Discount"
                     android:background="?android:attr/selectableItemBackground" />
             </LinearLayout>
         </LinearLayout>
@@ -302,8 +301,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="4dp"
-            android:background="#7d7123"></LinearLayout>
-
+            android:background="#7d7123" />
 
     </LinearLayout>
 
